classDiagram
    %% ===== 图例 =====
    note "【不变】= 字段/接口本次不改动   【修改】= 仅局部逻辑增量" as Legend

    %% ===== 数据层（确认不变）=====
    class AnalysisRecord {
        <<不变>>
        +Long id
        +String type
        +Long createdAt
        +String imageBase64
        +String summary
        +String detailJson
        +String displayText
    }
    class UserProfile {
        <<不变>>
        +Long id
        +String name
        +Float heightCm
        +Float weightKg
        +Int age
        +String gender
        +String goal
        +String activity
    }

    %% ===== UI 层（本次增量）=====
    class HistoryAdapter {
        <<修改>>
        -List~AnalysisRecord~ items
        -MutableList~Boolean~ expanded
        +onCreateViewHolder() : VH
        +onBindViewHolder(holder, pos)
        +getItemCount() : Int
        -toggle(pos)
    }
    class HistoryFragment {
        <<修改>>
        +load()
        -showDetail()  %% 本次移除
    }
    class BodyAnalysisFragment {
        <<不变（仅 R2 验收）>>
        -Long selectedProfileId
        +loadProfilesAndSetupDropdown()
    }
    class FoodAnalysisFragment {
        <<不变（仅 R2 验收）>>
        -Long selectedProfileId
        +loadProfilesAndSetupDropdown()
    }
    class ProfileFragment {
        <<不变>>
        +openDialog(UserProfile?)
    }

    %% ===== 工具层（不变，仅被引用）=====
    class ResultFormatter {
        <<不变>>
        +String displayTextFor(AnalysisRecord rec)
        +String formatBody(BodyAnalysis r)
        +String formatFood(FoodAnalysis r)
    }
    class AppPreferences {
        <<不变>>
        +Long getActiveProfileId(Context)
        +Unit setActiveProfileId(Context, Long)
    }
    class UserProfileDao {
        <<不变>>
        +suspend List~UserProfile~ getAll()
        +suspend UserProfile getById(Long)
    }

    HistoryAdapter --> AnalysisRecord : 读 summary / displayText
    HistoryAdapter ..> ResultFormatter : displayTextFor 全文
    HistoryFragment ..> HistoryAdapter : 绑定(无 onClick)
    BodyAnalysisFragment ..> UserProfileDao : getAll
    BodyAnalysisFragment ..> AppPreferences : activeProfileId(只读)
    FoodAnalysisFragment ..> UserProfileDao : getAll
    FoodAnalysisFragment ..> AppPreferences : activeProfileId(只读)
    ProfileFragment ..> UserProfileDao : 增删改查
    ProfileFragment ..> AppPreferences : 写 activeProfileId

    note for HistoryAdapter "expanded 为适配器内 per-position 状态，\n随 adapter 重建重置，无持久化、不入库"
